--- a/Windows/ms_iisv6.conf
+++ b/Windows/ms_iisv6.conf
@@ -4,7 +4,7 @@
 
 <Extension _w3ciis6>
     Module	xm_csv
-    Fields	date,$time,$c-ip,$cs-username,$s-sitename,$s-computername,$s-ip,$s-port,$cs-method,$cs-uri-stem,$cs-uri-query,$sc-status,$sc-win32-status,$sc-bytes,$cs-bytes,$time-taken,$cs-version,$cs-host,$cs-user-agent,$cs-cookie,$cs-referer
+    Fields	$date,$time,$c-ip,$cs-username,$s-sitename,$s-computername,$s-ip,$s-port,$cs-method,$cs-uri-stem,$cs-uri-query,$sc-status,$sc-win32-status,$sc-bytes,$cs-bytes,$time-taken,$cs-version,$cs-host,$cs-user-agent,$cs-cookie,$cs-referer
     Delimiter	' '
     EscapeControl FALSE
     UndefValue  -
